--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Yi-Yun's Homepage"
 title_separator          : "-"
 name                     : &name "Yi-Yun Chu"
 description              : &description "personal description"
-url                      : https://athena1005.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://yiyun-chu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "athena1005/yiyunchu.github.io"
+repository               : "yiyun-chu/yiyun-chu.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
