--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.jpg"
   bio              : "Information Systems Ph.D. Candidate"
   location         : "Pittsburgh, PA"
-  employer         : "Carneige Mellon University"
+  employer         : "Carnegie Mellon University"
   pubmed           : 
   googlescholar    : #"https://scholar.google.com/citations?user=UMKkDVwAAAAJ"
   email            : "yiyunchu@andrew.cmu.edu"
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "athean1005"
+  github           : 
   google_plus      :
   keybase          :
   instagram        :
