--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,14 +8,14 @@ main:
   # - title: "CV"
   #   url: /cv/
 
-  - title: "Publications"
+  - title: "Research"
     url: /publications/
 
   - title: "Talks"
     url: /talks/    
 
   - title: "Teaching"
-    url: /teaching/    
+    # url: /teaching/    
     
   # - title: "Portfolio"
   #   url: /portfolio/
