--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
     url: /talks/    
 
   - title: "Teaching"
-    url: /teaching/    
+    url: /teaching/teaching_exp    
     
   # - title: "Portfolio"
   #   url: /portfolio/
