--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   #   url: /cv/
 
   - title: "Research"
-    url: /publications/
+    url: /research/
 
   - title: "Talks"
     url: /talks/    
