--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ main:
   - title: "Research"
     url: /research/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Presentations"
+    url: /Presentations/    
 
   - title: "Teaching"
     url: /teaching/teaching_exp    
