--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
     url: /research/
 
   - title: "Presentations"
-    url: /Presentations/    
+    url: /presentation/    
 
   - title: "Teaching"
     url: /teaching/teaching_exp    
