--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yi-Yun Chu"
-  avatar           : "images/profile.jpg"
+  avatar           : "profile.jpg"
   bio              : "Information Systems Ph.D. Candidate"
   location         : "Pittsburgh, PA"
   employer         : "Carnegie Mellon University"
